--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
     "main": "./src/server.js",
     "private": true,
     "scripts": {
+        "build-all": "npm -C ./server run build && npm -C ./frontend run build",
         "test": "npm run lint",
-        "lint": "./node_modules/.bin/eslint 'frontend/src/**/*.{js,vue}' 'server/src/**/*.js'",
+        "lint": "./node_modules/.bin/eslint 'frontend/src/**/*.{js,vue,ts,json}' 'server/src/**/*.{ts,js,json}'",
         "install-all": "npm install && npm -C ./frontend install && npm -C ./server install",
         "docker": "bash -c \"trap 'docker-compose down' EXIT; docker-compose up\"",
         "docker:rebuild": "bash -c \"trap 'docker-compose down' EXIT; docker-compose up --build\"",
-        "devdb": "docker exec -it developers-notebook_postgres_1 psql devnotebook -U devnotebook -W"
+        "devdb": "docker exec -it alexnotes_postgres_1 psql alexnotes -U alexnotes -W"
     },
     "repository": {
         "type": "git",
@@ -18,9 +19,11 @@
     },
     "author": "Alex Seifert",
     "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^1.7.0",
+        "@vue/eslint-config-typescript": "^4.0.0",
         "concurrently": "^4.1.0",
         "eslint": "^5.16.0",
-        "eslint-plugin-html": "^5.0.3",
+        "eslint-plugin-disable": "^1.0.4",
         "eslint-plugin-promise": "^4.1.1",
         "eslint-plugin-vue": "^5.2.2",
         "husky": "^1.3.1"
@@ -29,5 +32,8 @@
         "hooks": {
             "pre-commit": "npm run lint"
         }
+    },
+    "dependencies": {
+        "typescript": "^3.4.5"
     }
 }
