--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,8 @@
     "main": "./src/server.js",
     "private": true,
     "scripts": {
+        "build": "./node_modules/.bin/tsc",
+        "build:dev": "./node_modules/.bin/ts-node --files src/server.ts",
         "start": "node ./src/server",
         "start:dev": "NODE_ENV=development ./node_modules/.bin/nodemon --inspect=0.0.0.0:5858 -e html,js,json",
         "start:staging": "NODE_ENV=staging npm start",
@@ -12,6 +14,12 @@
         "test:unit": "NODE_CONFIG_DIR='./src/config' jest --forceExit --detectOpenHandles"
     },
     "dependencies": {
+        "@types/body-parser": "^1.17.0",
+        "@types/config": "0.0.34",
+        "@types/express": "^4.16.1",
+        "@types/node": "^11.13.7",
+        "@types/request": "^2.48.1",
+        "@types/sequelize": "^4.27.48",
         "apicache": "^1.4.0",
         "bcrypt-nodejs": "0.0.3",
         "body-parser": "^1.18.3",
@@ -32,6 +40,7 @@
         "sequelize": "^4.43.2",
         "sequelize-migration-wrapper": "^0.1.0",
         "slug": "^0.9.4",
+        "typescript": "^3.4.5",
         "umzug": "^2.1.0",
         "uuid": "^3.3.2"
     },
@@ -40,12 +49,13 @@
         "jest": "^24.7.1",
         "nodemon": "^1.18.11",
         "sequelize-mock": "^0.10.2",
-        "supertest": "^3.4.2"
+        "supertest": "^3.4.2",
+        "ts-node": "^8.1.0"
     },
     "jest": {
         "testPathIgnorePatterns": [
             "/node_modules/",
-            "/src/config"
+            "/config"
         ],
         "collectCoverage": true,
         "verbose": false,
