--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,8 @@
     "scripts": {
         "build": "./node_modules/.bin/tsc",
         "build:dev": "./node_modules/.bin/ts-node --files src/server.ts",
-        "start": "node ./src/server",
-        "start:dev": "NODE_ENV=development ./node_modules/.bin/nodemon --inspect=0.0.0.0:5858 -e html,js,json",
+        "start": "node ../dist/src/index.js",
+        "start:dev": "NODE_ENV=development ./node_modules/.bin/nodemon --inspect=0.0.0.0:5858",
         "start:staging": "NODE_ENV=staging npm start",
         "start:prod": "NODE_ENV=production npm start",
         "test": "echo 'Tests should be run here'",
@@ -18,6 +18,7 @@
         "@types/config": "0.0.34",
         "@types/express": "^4.16.1",
         "@types/node": "^11.13.7",
+        "@types/passport": "^1.0.0",
         "@types/request": "^2.48.1",
         "@types/sequelize": "^4.27.48",
         "apicache": "^1.4.0",
