--- a/package.json
+++ b/package.json
@@ -25,13 +25,7 @@
         "eslint": "^5.16.0",
         "eslint-plugin-disable": "^1.0.4",
         "eslint-plugin-promise": "^4.1.1",
-        "eslint-plugin-vue": "^5.2.2",
-        "husky": "^1.3.1"
-    },
-    "husky": {
-        "hooks": {
-            "pre-commit": "npm run lint"
-        }
+        "eslint-plugin-vue": "^5.2.2"
     },
     "dependencies": {
         "typescript": "^3.4.5"
