--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
         "webpack": "^4.30.0"
     },
     "devDependencies": {
+        "copy-webpack-plugin": "^5.0.3",
         "debug": "^4.1.1",
         "jest": "^24.7.1",
         "supertest": "^3.4.2",
