#21: use sqlite for the database for storing user information

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -10,10 +10,9 @@
         "resolveJsonModule": true
     },
     "include": [
-        "server/src/**/*.ts"
+        "./src/**/*.ts"
     ],
     "exclude": [
-        "dist",
         "node_modules"
     ]
 }
