--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,6 @@
         "@types/node": "^11.13.7",
         "@types/passport": "^1.0.0",
         "@types/request": "^2.48.1",
-        "@types/sequelize": "^4.27.48",
         "apicache": "^1.4.0",
         "bcrypt-nodejs": "0.0.3",
         "body-parser": "^1.18.3",
@@ -36,11 +35,10 @@
         "passport": "^0.4.0",
         "passport-jwt": "^4.0.0",
         "passport-local": "^1.0.0",
-        "pg": "^7.10.0",
-        "pg-hstore": "^2.3.2",
         "sequelize": "^5.7.5",
         "sequelize-migration-wrapper": "^0.1.0",
         "slug": "^0.9.4",
+        "sqlite3": "^4.0.6",
         "typescript": "^3.4.5",
         "umzug": "^2.1.0",
         "uuid": "^3.3.2"
