--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
     "name": "frontend",
     "version": "0.1.0",
-    "main": "./src/app.js",
+    "main": "../dist/public/assets/index.js",
     "scripts": {
         "start": "NODE_ENV=development webpack --watch",
         "build": "NODE_ENV=development webpack",
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@kazupon/vue-i18n-loader": "^0.3.0",
+        "@types/node": "^11.13.7",
         "browser-cookies": "^1.2.0",
         "compile-sass": "0.0.5",
         "css-loader": "^1.0.1",
@@ -20,6 +21,8 @@
         "node-sass": "^4.11.0",
         "popper.js": "^1.15.0",
         "sass-loader": "^7.1.0",
+        "ts-loader": "^5.4.3",
+        "typescript": "^3.4.5",
         "vue": "^2.6.10",
         "vue-filepond": "^5.1.0",
         "vue-i18n": "^8.10.0",
