--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
     "name": "server",
     "version": "0.2.0",
-    "main": "./src/server.js",
+    "main": "../dist/backend/server.js",
     "private": true,
     "scripts": {
         "build": "./node_modules/.bin/tsc",
