--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@kazupon/vue-i18n-loader": "^0.3.0",
         "@types/node": "^11.13.7",
+        "@vue/cli-plugin-typescript": "^3.6.0",
         "browser-cookies": "^1.2.0",
         "compile-sass": "0.0.5",
         "css-loader": "^1.0.1",
