--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "build": "./node_modules/.bin/tsc",
         "build:dev": "./node_modules/.bin/ts-node --files src/server.ts",
-        "start": "node ../dist/src/index.js",
+        "start": "node ../dist/backend/server.js",
         "start:dev": "NODE_ENV=development ./node_modules/.bin/nodemon --inspect=0.0.0.0:5858",
         "start:staging": "NODE_ENV=staging npm start",
         "start:prod": "NODE_ENV=production npm start",
