#18: configure the TypeScript compiler so it's compatible with Vuetify

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "module": "commonjs",
+        "module": "esnext",
         "moduleResolution": "node",
         "pretty": true,
         "sourceMap": false,
@@ -16,12 +16,6 @@
         "types": [
             "webpack-env",
             "vuetify"
-        ],
-        "lib": [
-            "esnext",
-            "dom",
-            "dom.iterable",
-            "scripthost"
         ]
     },
     "include": [
