--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -5,7 +5,7 @@
         "pretty": true,
         "sourceMap": false,
         "target": "es6",
-        "outDir": "../dist/backend",
+        "outDir": "../../dist/backend",
         "baseUrl": "./src",
         "resolveJsonModule": true
     },
