--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -5,7 +5,7 @@
         "pretty": true,
         "sourceMap": false,
         "target": "es6",
-        "outDir": "../dist",
+        "outDir": "../../dist",
         "baseUrl": "./src",
         "resolveJsonModule": true,
         "paths": {
