--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,25 +1,18 @@
 {
     "name": "server",
-    "version": "0.2.0",
-    "main": "../dist/backend/server.js",
+    "version": "0.1.0",
+    "main": "../../dist/backend/server.js",
     "private": true,
     "scripts": {
         "build": "./node_modules/.bin/tsc",
         "build:dev": "./node_modules/.bin/ts-node --files src/server.ts",
-        "start": "node ../dist/backend/server.js",
+        "start": "node ../../dist/backend/server.js",
         "start:dev": "NODE_ENV=development ./node_modules/.bin/nodemon --inspect=0.0.0.0:5858",
         "start:staging": "NODE_ENV=staging npm start",
         "start:prod": "NODE_ENV=production npm start",
-        "test": "echo 'Tests should be run here'",
-        "test:unit": "NODE_CONFIG_DIR='./src/config' jest --forceExit --detectOpenHandles"
+        "test": "echo 'Tests should be run here'"
     },
     "dependencies": {
-        "@types/body-parser": "^1.17.0",
-        "@types/config": "0.0.34",
-        "@types/express": "^4.16.1",
-        "@types/node": "^11.13.7",
-        "@types/passport": "^1.0.0",
-        "@types/request": "^2.48.1",
         "apicache": "^1.4.0",
         "bcrypt": "^3.0.6",
         "body-parser": "^1.18.3",
@@ -39,24 +32,16 @@
         "sequelize-migration-wrapper": "^0.1.0",
         "slug": "^1.1.0",
         "sqlite3": "^4.0.6",
-        "typescript": "^3.4.5",
         "umzug": "^2.1.0",
         "uuid": "^3.3.2"
     },
     "devDependencies": {
-        "debug": "^4.1.1",
-        "jest": "^24.7.1",
+        "@types/body-parser": "^1.17.0",
+        "@types/config": "0.0.34",
+        "@types/express": "^4.16.1",
+        "@types/passport": "^1.0.0",
+        "@types/request": "^2.48.1",
         "nodemon": "^1.18.11",
-        "supertest": "^3.4.2",
         "ts-node": "^8.1.0"
-    },
-    "jest": {
-        "testPathIgnorePatterns": [
-            "/node_modules/",
-            "/config"
-        ],
-        "collectCoverage": true,
-        "verbose": false,
-        "testEnvironment": "node"
     }
 }
