--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,18 +1,19 @@
 {
-    "name": "server",
+    "name": "alexnotes-server",
     "version": "0.1.0",
-    "main": "../../dist/backend/server.js",
+    "main": "./dist/index.js",
     "private": true,
     "scripts": {
-        "build": "./node_modules/.bin/tsc",
-        "build:dev": "./node_modules/.bin/ts-node --files src/server.ts",
-        "start": "node ../../dist/backend/server.js",
+        "build": "../../node_modules/.bin/tsc",
+        "build:dev": "./node_modules/.bin/ts-node --files src/index.ts",
+        "start": "node ./dist/index.js",
         "start:dev": "NODE_ENV=development ./node_modules/.bin/nodemon --inspect=0.0.0.0:5858",
         "start:staging": "NODE_ENV=staging npm start",
         "start:prod": "NODE_ENV=production npm start",
         "test": "echo 'Tests should be run here'"
     },
     "dependencies": {
+        "alexnotes-frontend": "^0.1.0",
         "apicache": "^1.4.0",
         "bcrypt": "^3.0.6",
         "body-parser": "^1.18.3",
