--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -16,6 +16,7 @@
         "alexnotes-frontend": "^0.1.0",
         "apicache": "^1.4.0",
         "bcrypt": "^3.0.6",
+        "bcryptjs": "^2.4.3",
         "body-parser": "^1.18.3",
         "compression": "^1.7.4",
         "config": "^3.1.0",
