--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ language: node_js
 node_js:
     - "10"
     - "11"
-    - "12"
 
 env:
     - NODE_ENV=TEST
@@ -12,5 +11,6 @@ install:
 
 script:
     - npm run lint
+    - npm run build
 
 cache: npm
