--- a/config.example.json
+++ b/config.example.json
@@ -14,6 +14,7 @@
             "username": "",
             "password": "",
             "privateKeyPath": ""
-        }
+        },
+        "localPath": "./repo"
     }
 }
