--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,49 +1,51 @@
 {
-    "name": "alexnotes-server",
-    "version": "0.2.0",
-    "main": "./dist/index.js",
-    "private": true,
-    "scripts": {
-        "build": "../../node_modules/.bin/tsc",
-        "build:dev": "./node_modules/.bin/ts-node --files src/index.ts",
-        "start": "node ./dist/index.js",
-        "start:dev": "NODE_ENV=development ./node_modules/.bin/nodemon --inspect=0.0.0.0:5858",
-        "start:staging": "NODE_ENV=staging npm start",
-        "start:prod": "NODE_ENV=production npm start",
-        "test": "echo 'Tests should be run here'"
-    },
-    "dependencies": {
-        "alexnotes-frontend": "^0.2.0",
-        "apicache": "^1.4.0",
-        "bcrypt": "^3.0.6",
-        "bcryptjs": "^2.4.3",
-        "body-parser": "^1.18.3",
-        "compression": "^1.7.4",
-        "config": "^3.1.0",
-        "cookie-parser": "^1.4.4",
-        "cron": "^1.7.0",
-        "express": "^4.16.4",
-        "express-enrouten": "^1.3.0",
-        "jsonwebtoken": "^8.5.1",
-        "mkdirp": "^0.5.1",
-        "morgan": "^1.9.1",
-        "passport": "^0.4.0",
-        "passport-jwt": "^4.0.0",
-        "passport-local": "^1.0.0",
-        "sequelize": "^5.7.5",
-        "sequelize-migration-wrapper": "^0.1.0",
-        "slug": "^1.1.0",
-        "sqlite3": "^4.0.6",
-        "umzug": "^2.1.0",
-        "uuid": "^3.3.2"
-    },
-    "devDependencies": {
-        "@types/body-parser": "^1.17.0",
-        "@types/config": "0.0.34",
-        "@types/express": "^4.16.1",
-        "@types/passport": "^1.0.0",
-        "@types/request": "^2.48.1",
-        "nodemon": "^1.18.11",
-        "ts-node": "^8.1.0"
-    }
+	"name": "alexnotes-server",
+	"version": "0.2.0",
+	"main": "./dist/index.js",
+	"private": true,
+	"scripts": {
+		"build": "../../node_modules/.bin/tsc",
+		"build:dev": "./node_modules/.bin/ts-node --files src/index.ts",
+		"start": "node ./dist/index.js",
+		"start:dev": "NODE_ENV=development ./node_modules/.bin/nodemon --inspect=0.0.0.0:5858",
+		"start:staging": "NODE_ENV=staging npm start",
+		"start:prod": "NODE_ENV=production npm start",
+		"test": "echo 'Tests should be run here'"
+	},
+	"dependencies": {
+		"alexnotes-frontend": "^0.2.0",
+		"apicache": "^1.4.0",
+		"bcrypt": "^3.0.6",
+		"bcryptjs": "^2.4.3",
+		"body-parser": "^1.18.3",
+		"compression": "^1.7.4",
+		"config": "^3.1.0",
+		"cookie-parser": "^1.4.4",
+		"cron": "^1.7.0",
+		"express": "^4.16.4",
+		"express-enrouten": "^1.3.0",
+		"jsonwebtoken": "^8.5.1",
+		"mkdirp": "^0.5.1",
+		"morgan": "^1.9.1",
+		"nodegit": "^0.24.3",
+		"passport": "^0.4.0",
+		"passport-jwt": "^4.0.0",
+		"passport-local": "^1.0.0",
+		"sequelize": "^5.7.5",
+		"sequelize-migration-wrapper": "^0.1.0",
+		"slug": "^1.1.0",
+		"sqlite3": "^4.0.6",
+		"umzug": "^2.1.0",
+		"uuid": "^3.3.2"
+	},
+	"devDependencies": {
+		"@types/body-parser": "^1.17.0",
+		"@types/config": "0.0.34",
+		"@types/express": "^4.16.1",
+		"@types/nodegit": "^0.24.6",
+		"@types/passport": "^1.0.0",
+		"@types/request": "^2.48.1",
+		"nodemon": "^1.18.11",
+		"ts-node": "^8.1.0"
+	}
 }
