--- a/config.example.json
+++ b/config.example.json
@@ -13,7 +13,9 @@
             "type": "",
             "username": "",
             "password": "",
-            "privateKeyPath": ""
+            "publicKeyPath": "",
+            "privateKeyPath": "",
+            "keyPassphrase": ""
         },
         "localPath": "./repo"
     }
