--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -27,12 +27,12 @@
 		"jsonwebtoken": "^8.5.1",
 		"mkdirp": "^0.5.1",
 		"morgan": "^1.9.1",
-		"nodegit": "^0.24.3",
 		"passport": "^0.4.0",
 		"passport-jwt": "^4.0.0",
 		"passport-local": "^1.0.0",
 		"sequelize": "^5.7.5",
 		"sequelize-migration-wrapper": "^0.1.0",
+		"simple-git": "^1.112.0",
 		"slug": "^1.1.0",
 		"sqlite3": "^4.0.6",
 		"umzug": "^2.1.0",
@@ -42,7 +42,6 @@
 		"@types/body-parser": "^1.17.0",
 		"@types/config": "0.0.34",
 		"@types/express": "^4.16.1",
-		"@types/nodegit": "^0.24.6",
 		"@types/passport": "^1.0.0",
 		"@types/request": "^2.48.1",
 		"nodemon": "^1.18.11",
