--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -22,7 +22,7 @@
         "vue-router": "^3.0.6",
         "vue-swatches": "^1.0.3",
         "vuetify": "^1.5.13",
-        "vuex": "^3.1.0"
+        "vuex": "^3.1.1"
     },
     "devDependencies": {
         "@kazupon/vue-i18n-loader": "^0.3.0",
@@ -34,8 +34,8 @@
         "ts-loader": "^5.4.3",
         "vue-loader": "^15.7.0",
         "vue-template-compiler": "^2.6.10",
-        "webpack-cli": "^3.3.1",
-        "webpack": "^4.30.0"
+        "webpack": "^4.31.0",
+        "webpack-cli": "^3.3.1"
     },
     "jest": {
         "testPathIgnorePatterns": [
