--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,12 +1,12 @@
 {
 	"name": "alexnotes-server",
 	"version": "0.2.0",
-	"main": "./dist/index.js",
+	"main": "./dist/server/src/index.js",
 	"private": true,
 	"scripts": {
 		"build": "../../node_modules/.bin/tsc",
 		"build:dev": "./node_modules/.bin/ts-node --files src/index.ts",
-		"start": "node ./dist/index.js",
+		"start": "node ./dist/server/src/index.js",
 		"start:dev": "NODE_ENV=development ./node_modules/.bin/nodemon --inspect=0.0.0.0:5858",
 		"start:staging": "NODE_ENV=staging npm start",
 		"start:prod": "NODE_ENV=production npm start",
