--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -6,23 +6,14 @@
         "prestart": "npm run build:index",
         "start": "NODE_ENV=development webpack --watch",
         "prebuild": "npm run build:index",
-        "build": "NODE_ENV=development webpack",
+        "build": "NODE_ENV=production webpack",
         "build:index": "../../node_modules/.bin/tsc ./src/index.ts --outDir ./dist",
-        "build:prod": "NODE_ENV=production webpack",
+        "build:dev": "NODE_ENV=development webpack",
         "test": "echo 'Tests should be run here'"
     },
     "dependencies": {
         "browser-cookies": "^1.2.0",
-        "jquery": "^3.4.0",
-        "material-design-icons-iconfont": "^4.0.5",
-        "node-sass": "^4.11.0",
-        "vue": "^2.6.10",
-        "vue-i18n": "^8.10.0",
-        "vue-resource": "^1.5.1",
-        "vue-router": "^3.0.6",
-        "vue-swatches": "^1.0.3",
-        "vuetify": "^1.5.13",
-        "vuex": "^3.1.1"
+        "jquery": "^3.4.0"
     },
     "devDependencies": {
         "@kazupon/vue-i18n-loader": "^0.3.0",
@@ -30,10 +21,19 @@
         "copy-webpack-plugin": "^5.0.3",
         "css-loader": "^2.1.1",
         "file-loader": "^3.0.1",
+        "material-design-icons-iconfont": "^4.0.5",
+        "node-sass": "^4.11.0",
         "sass-loader": "^7.1.0",
         "ts-loader": "^5.4.3",
+        "vue": "^2.6.10",
+        "vue-i18n": "^8.10.0",
         "vue-loader": "^15.7.0",
+        "vue-resource": "^1.5.1",
+        "vue-router": "^3.0.6",
+        "vue-swatches": "^1.0.3",
         "vue-template-compiler": "^2.6.10",
+        "vuetify": "^1.5.13",
+        "vuex": "^3.1.1",
         "webpack": "^4.31.0",
         "webpack-cli": "^3.3.1"
     },
