--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "author": "Alex Seifert",
     "devDependencies": {
+        "@types/marked": "^0.6.5",
         "@types/node": "^12.0.0",
         "@typescript-eslint/eslint-plugin": "^1.8.0",
         "@vue/eslint-config-typescript": "^4.0.0",
@@ -35,5 +36,8 @@
         "lerna": "^3.13.4",
         "typescript": "^3.4.5"
     },
-    "dependencies": {}
+    "dependencies": {
+        "highlight.js": "^9.15.6",
+        "marked": "^0.6.2"
+    }
 }
