--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -22,6 +22,7 @@
         "css-loader": "^2.1.1",
         "file-loader": "^3.0.1",
         "material-design-icons-iconfont": "^4.0.5",
+        "monaco-editor-webpack-plugin": "^1.7.0",
         "node-sass": "^4.11.0",
         "sass-loader": "^7.1.0",
         "ts-loader": "^5.4.3",
