Update package names

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "alexnotes-frontend",
+    "name": "@alexnotes/frontend",
     "version": "0.3.0",
     "main": "./dist/index.js",
     "scripts": {
