Fixed a problem with some of the config files not copying into the Docker container

--- a/docker-examples/Dockerfile
+++ b/docker-examples/Dockerfile
@@ -1,10 +1,4 @@
 FROM alexseifert/alexnotes:latest
 
-# Add your local git config to the Docker container
-ADD ~/.gitconfig /etc/gitconfig
-
-# Add your SSH key if your git repository is only accessible via SSH.
-ADD ~/.ssh/id_rsa /home/alexnotes/.ssh/id_rsa
-
-# Then add the hostname of the repository to the known_hosts
+# Then add the hostname of your git repository to the known_hosts file if you are using SSH
 RUN mkdir -p ~/.ssh && ssh-keyscan -t rsa gitlab.com > ~/.ssh/known_hosts
