--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ install:
 jobs:
     include:
         - stage: "Tests"
+          node_js: 12
           name: "Linting"
           script: npm run lint
         - script: npm run test
