Update the docker-compose.yml example

--- a/docker-examples/docker-compose.yml
+++ b/docker-examples/docker-compose.yml
@@ -5,13 +5,12 @@ services:
         build: .
         container_name: alexnotes
         volumes:
-            - "./storage.sqlite3:/app/storage.sqlite3"
             - "./config.js:/app/config.js:ro"
             # Add your local git config to the Docker container
             - "~/.gitconfig:/etc/gitconfig:ro"
             # Mount your SSH key if necessary
             - "~/.ssh/id_rsa:/home/alexnotes/.ssh/id_rsa:ro"
-            # Mount the notes repo to an external folder. This is optional!
+            # Mount the notes repo and user database to an external folder
             - "~/.alexnotes:/home/alexnotes/.alexnotes"
         ports:
             - "80:3010"
