--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
         "@types/jest": "^24.0.13",
         "@types/marked": "^0.6.5",
         "@types/node": "^12.0.0",
+        "@types/superagent": "^4.1.1",
+        "@types/supertest": "^2.0.7",
         "@typescript-eslint/eslint-plugin": "^1.8.0",
         "@vue/eslint-config-typescript": "^4.0.0",
         "concurrently": "^4.1.0",
@@ -39,6 +41,8 @@
         "eslint-plugin-vue": "^5.2.2",
         "jest": "^24.8.0",
         "lerna": "^3.13.4",
+        "superagent": "^5.0.8",
+        "supertest": "^4.0.2",
         "ts-jest": "^24.0.2",
         "typescript": "^3.4.5"
     },
